[metadata]
name = clematis
version = 0.1.0
author = Filipe Verri, Paulo Victor Lopes, Leonardo Silveira, Douglas Aquino 
author_email =  filipeverri@gmail.com, victorf.lopesbr@gmail.com, leonardo.silveira@ga.ita.br, aquinordga@gmail.com
description = clematis: clematis description
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = https://github.com/Victorf-lopes/clematis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    igraph
    numpy

[options.packages.find]
where = src
